🚧 Fix carousel product card shadow that being clipped

--- a/src/scss/elements/carousel.scss
+++ b/src/scss/elements/carousel.scss
@@ -13,6 +13,8 @@
 
   &-container {
     // @extend .swiper-container;
+    margin: 0 -24px -28px;
+    padding: 0 24px 52px;
   }
 
   &-items {
@@ -25,6 +27,18 @@
     margin-right: initial;
     backface-visibility: initial;
     transition: initial;
+
+    &.swiper-slide-prev,
+    &.swiper-slide-duplicate-active {
+      .card {
+        box-shadow: none;
+      }
+    }
+    &.swiper-slide-active {
+      .card {
+        box-shadow: 0px 28px 40px -1px rgba(14, 31, 53, 0.12) impot !important;
+      }
+    }
   }
 
   &-nav {
